# map.rs

./: Cargo.toml  README.md
AppDir/: .DirIcon  AppRun  map-rs.desktop
AppDir/usr/lib/: libFLAC.so.12  libasyncns.so.0  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatspi.so.0  libavif.so.16  libbrotlienc.so.1  libcpuinfo.so.24.09.26  libdav1d.so.7  libdw.so.1  libelf.so.1  libenchant-2.so.2  libevdev.so.2  libflite.so.1  libflite_cmu_us_awb.so.1  libflite_cmu_us_kal.so.1  libflite_cmu_us_rms.so.1  libflite_cmu_us_slt.so.1  libflite_cmulex.so.1  libflite_usenglish.so.1  libgcrypt.so.20  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libgmodule-2.0.so.0  libgnutls.so.30  libgobject-2.0.so.0  libgsm.so.1  libgstallocators-1.0.so.0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstbase-1.0.so.0  libgstfft-1.0.so.0  libgstgl-1.0.so.0  libgstpbutils-1.0.so.0  libgstreamer-1.0.so.0  libgsttag-1.0.so.0  libgsttranscoder-1.0.so.0  libgstvideo-1.0.so.0  libgudev-1.0.so.0  libharfbuzz-icu.so.0  (+35 more)
AppDir/usr/share/applications/: map-rs.desktop
src/: geolocation.rs  main.rs  main_map.rs  main_simple.rs  map.html  map_embedded.html  routing.rs
