[package]
name = "map-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.7"
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
urlencoding = "2.1"
